--- a/slides/sre-next-2025/src/package.json
+++ b/slides/sre-next-2025/src/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build --base /sre-next-2025/ --out ../../../dist/sre-next-2025",
+    "build": "slidev build --base /sre-next-2025/ --out dist",
     "dev": "slidev --open",
     "export": "slidev export"
   },
