--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "aki310-slides",
   "version": "1.0.0",
-  "description": "Simple Slidev multi-slide management system with Vercel deployment",
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "npm run build:slides && npm run build:index",
+    "build": "npm run build:slides && npm run build:index && npm run build:previews",
     "build:slides": "npm run build:sre-next-2025 && npm run build:slidev-system",
-    "build:sre-next-2025": "cd slides/sre-next-2025/src && npm install && npm run build && cp -r dist/* ../../../dist/sre-next-2025/",
-    "build:slidev-system": "cd slides/slidev-system/src && npm install && npm run build && cp -r dist/* ../../../dist/slidev-system/",
-    "build:index": "mkdir -p dist && node scripts/build-index.js",
+    "build:sre-next-2025": "cd slides/sre-next-2025/src && npm install && npm run build",
+    "build:slidev-system": "cd slides/slidev-system/src && npm install && npm run build",
+    "build:index": "node scripts/build-index.js",
+    "build:previews": "node scripts/generate-previews.js --production",
+    "generate-previews": "node scripts/generate-previews.js",
+    "generate-previews:dev": "node scripts/generate-previews.js --with-server",
+    "generate-previews:local": "npm run build:slides && npm run generate-previews:dev",
+    "update-previews": "npm run generate-previews:local && git add dist/previews/ && git commit -m '🖼️ Update preview images' && git push",
+    "create-slide": "node scripts/create-slide.js",
     "dev:sre-next-2025": "cd slides/sre-next-2025/src && npm run dev",
     "dev:slidev-system": "cd slides/slidev-system/src && npm run dev"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wwlapaki310/aki310-slides.git"
-  },
-  "author": "Satoru Akita",
-  "license": "MIT"
+  "devDependencies": {
+    "playwright-chromium": "^1.45.1"
+  }
 }
