--- a/slides/slidev-system/src/package.json
+++ b/slides/slidev-system/src/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build --base /slidev-system/ --out dist",
+    "build": "slidev build --base /slidev-system/ --out ../../../dist/slidev-system",
     "dev": "slidev --open",
     "export": "slidev export"
   },
