Simplify package.json to match working my-slidev-presentations structure

--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "my-slidev-presentations",
   "version": "1.0.0",
+  "description": "Multiple Slidev presentations management system",
   "type": "module",
-  "private": true,
   "scripts": {
-    "build": "npm run build:slides && npm run build:index && npm run build:previews",
-    "build:slides": "npm run build:sre-next-2025 && npm run build:slidev-system",
-    "build:sre-next-2025": "cd slides/sre-next-2025/src && npm install && npm run build",
-    "build:slidev-system": "cd slides/slidev-system/src && npm install && npm run build",
+    "build": "npm run build:slidev-system && npm run build:index",
+    "build:slidev-system": "cd slides/slidev-system/src && npm run build",
     "build:index": "node scripts/build-index.js",
-    "build:previews": "node scripts/generate-previews.js --production",
-    "generate-previews": "node scripts/generate-previews.js",
-    "generate-previews:dev": "node scripts/generate-previews.js --with-server",
-    "generate-previews:local": "npm run build:slides && npm run generate-previews:dev",
-    "update-previews": "npm run generate-previews:local && git add dist/previews/ && git commit -m '🖼️ Update preview images' && git push",
+    "dev:slidev-system": "cd slides/slidev-system/src && npm run dev",
     "create-slide": "node scripts/create-slide.js",
-    "dev:sre-next-2025": "cd slides/sre-next-2025/src && npm run dev",
-    "dev:slidev-system": "cd slides/slidev-system/src && npm run dev"
+    "generate-previews": "node scripts/generate-previews.js"
+  },
+  "keywords": [
+    "slidev",
+    "presentation",
+    "vercel",
+    "vue",
+    "markdown",
+    "slides",
+    "multi-presentation"
+  ],
+  "author": "Satoru Akita",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wwlapaki310/aki310-slides"
   },
   "devDependencies": {
-    "playwright-chromium": "^1.45.1"
+    "playwright-chromium": "^1.40.0"
   }
 }
