Simplify vercel.json to match working my-slidev-presentations structure

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,5 @@
 {
-  "installCommand": "npm install",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "rewrites": [
-    { "source": "/sre-next-2025/(.*)", "destination": "/sre-next-2025/index.html" },
-    { "source": "/slidev-system/(.*)", "destination": "/slidev-system/index.html" },
-    { "source": "/", "destination": "/index.html" }
-  ],
-  "headers": [
-    {
-      "source": "/previews/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    }
+    { "source": "/slidev-system/:path*", "destination": "/slidev-system/:path*" }
   ]
 }
