--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Multiple Slidev presentations management system",
   "type": "module",
   "scripts": {
-    "build": "npm run build:slidev-system && npm run build:index",
+    "build": "npm run build:slidev-system && npm run build:sre-next-2025 && npm run build:index",
     "build:slidev-system": "cd slides/slidev-system/src && npm run build",
+    "build:sre-next-2025": "cd slides/sre-next-2025/src && npm run build",
     "build:index": "node scripts/build-index.js",
     "dev:slidev-system": "cd slides/slidev-system/src && npm run dev",
+    "dev:sre-next-2025": "cd slides/sre-next-2025/src && npm run dev",
     "create-slide": "node scripts/create-slide.js",
     "generate-previews": "node scripts/generate-previews.js"
   },
