Add routing for both slides in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/sre-next-2025/:path*", "destination": "/sre-next-2025/:path*" },
     { "source": "/slidev-system/:path*", "destination": "/slidev-system/:path*" }
   ]
 }
