🔧 Vercelビルド修正: outputDirectory指定

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     { "source": "/sre-next-2025/:path*", "destination": "/sre-next-2025/:path*" },
     { "source": "/slidev-system/:path*", "destination": "/slidev-system/:path*" }
