🔧 Fix vercel.json: Add missing smart-tag-system rewrite rule
- Added rewrite rule for smart-tag-system slide
- Ensures all three slides are accessible via direct URLs
- Completes Vercel routing configuration for all slides

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "outputDirectory": "dist",
   "rewrites": [
     { "source": "/sre-next-2025/:path*", "destination": "/sre-next-2025/:path*" },
-    { "source": "/slidev-system/:path*", "destination": "/slidev-system/:path*" }
+    { "source": "/slidev-system/:path*", "destination": "/slidev-system/:path*" },
+    { "source": "/smart-tag-system/:path*", "destination": "/smart-tag-system/:path*" }
   ]
 }
