--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
+  "installCommand": "npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "framework": null,
   "rewrites": [
     { "source": "/sre-next-2025/:path*", "destination": "/sre-next-2025/:path*" },
     { "source": "/slidev-system/:path*", "destination": "/slidev-system/:path*" },
