🔧 Fix slidev version in sre-next-2025
- Changed @slidev/cli from invalid 52.0.0 to ^0.49.29
- Updated @slidev/theme-default to match CLI version
- Ensures compatible Slidev package versions
- Resolves npm ETARGET error during build

--- a/slides/sre-next-2025/src/package.json
+++ b/slides/sre-next-2025/src/package.json
@@ -8,8 +8,8 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "52.0.0",
-    "@slidev/theme-default": "latest",
+    "@slidev/cli": "^0.49.29",
+    "@slidev/theme-default": "^0.49.29",
     "vue": "^3.4.31"
   },
   "devDependencies": {
