🔧 Fix slidev version and build config in smart-tag-system
- Changed @slidev/cli from ^0.52.0 to ^0.49.29 (valid version)
- Updated @slidev/theme-default to match CLI version
- Added proper build configuration with base and output paths
- Added missing dependencies (vue) and devDependencies
- Ensures consistency with other slide packages

--- a/slides/smart-tag-system/src/package.json
+++ b/slides/smart-tag-system/src/package.json
@@ -1,13 +1,18 @@
 {
   "name": "smart-tag-system-slides",
   "type": "module",
+  "private": true,
   "scripts": {
-    "build": "slidev build",
+    "build": "slidev build --base /smart-tag-system/ --out ../../../dist/smart-tag-system",
     "dev": "slidev --open",
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.52.0",
-    "@slidev/theme-default": "latest"
+    "@slidev/cli": "^0.49.29",
+    "@slidev/theme-default": "^0.49.29",
+    "vue": "^3.4.31"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.45.1"
   }
 }
